--- a/templates/base.html
+++ b/templates/base.html
@@ -30,20 +30,24 @@
   <div class="navbar-fixed">
     <nav>
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo">Find My Job</a>
+      <a href="/" class="brand-logo"><img class="responsive-img" src="{% static 'images/green_logo.png' %}" alt=""></a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down nav_active navbar_items">
           {% if request.user.is_authenticated %}
             {% if user_type.user_type_name == 'jobseeker' %}
+           <li><a href="/">Home</a></li>
            <li><a href="{% url 'Jobseeker:jobseeker_view_jobs' %}">Applied Jobs</a></li>
-        <li><a href="{% url 'Jobseeker:jobseeker_profile' %}">Profile{% if need_update %}<span class="btn-floating pulse new badge"></span>{% endif %}</a></li>
+        <li><a href="{% url 'Jobseeker:jobseeker_profile' %}">Profile{% if need_update %}<span class="btn-floating pulse new badge green darken-1 "></span>{% endif %}</a></li>
             {% elif user_type.user_type_name == 'employer' %}
+           <li><a href="/">Home</a></li>
           <li><a href="{% url 'Employer:post_job_crud' operation='new' id=0 %}">Post Job</a></li>
           <li><a href="{% url 'Employer:employer_view_jobs' %}">My Jobs</a></li>
-          <li><a href="{% url 'Employer:employer_profile' %}">Profile{% if need_update %}<span class="btn-floating pulse new badge"></span>{% endif %}</a></li>
+          <li><a href="{% url 'Employer:employer_profile' %}">Profile{% if need_update %}<span class="btn-floating pulse new badge green darken-1"></span>{% endif %}</a></li>
             {% endif %}
+
         <li><a href="{% url 'Accounts:user_logout' %}">Logout</a></li>
           {% else %}
+          <li><a href="/">Home</a></li>
         <li><a href="{% url 'Accounts:user_login' %}">Login</a></li>
         <li><a href="{% url 'Accounts:register' %}">Register</a></li>
           {% endif %}
