--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -3,7 +3,10 @@
     display:none;
 }
 //variables
-$primary-color:#37474f;
+$gable-green-background:linear-gradient(90deg, #38a745 0%, #4cce5b 63%);
+$green-button-color:#28a745;
+$blue-background-color:rgba(22, 68, 186, 0.9);
+$primary-color:linear-gradient(90deg, #38a745 0%, #4cce5b 63%);
 $color-primary:#55c57a;
 $color-primary-light:#7ed56f;
 $color-primary-dark:#28b485;
@@ -26,13 +29,43 @@ body {
     line-height: 1.5;
     background-color:rgb(250,250,250);
 }
+.btn{
+    background-color:$green-button-color !important;
+}
+//colors
+.primary-text{
+    color:$green-button-color;
+}
+.primary-background{
+    background-color:$gable-green-background !important;
+}
 //  navbar
 .navbar-fixed nav{
-    width:99%;
+    width:100%;
+
 }
 .nav-wrapper{
-    background-color:$primary-color;
+   background-color:white;
+    a{
+        color:black;
+    }
+
 }
+.brand-logo{
+    height:64px;
+    img{
+        transform:scale(2);
+        height:64px;
+        
+    }
+
+}
+.active{
+    a{
+        color:$green-button-color;
+    }
+}
+
 .navbar-fixed{
     top:0px;
 }
@@ -44,6 +77,7 @@ body {
   .navbar_items{
     margin-right:10rem !important;
   }
+
 }
 
 // Registration Form
@@ -61,7 +95,7 @@ body {
 // footer
 .page-footer{
     width:100%;
-    background-color:$primary-color;
+    background-image:$primary-color;
     //margin-top:4rem;
 }
 .content{
@@ -125,7 +159,7 @@ body {
     text-transform: capitalize;
     font-weight: 700;
     display: inline-block;
-    background-image: linear-gradient(to right, $primary-color, $primary-color);
+    background-image:$gable-green-background;
     -webkit-background-clip: text;
     color: transparent;
     letter-spacing: .2rem;
@@ -181,7 +215,7 @@ body {
     &_background{
         min-height:20vh;
         width:100%;
-        background-color:#80d8ff;
+       background-image:$gable-green-background;
         color:white;
         font-size:2rem;
         font-weight:400;
@@ -259,7 +293,7 @@ body {
 }
 //active class
 .pagination li.active{
-    background-color:#80d8ff;
+    background-color:$green-button-color;
     color:white;
 }
 
@@ -267,8 +301,11 @@ body {
 .jobseeker_index{
     &_searchbar{
         &_background{
+            margin-bottom:60vh;
             height:35vh;
-            background-image:linear-gradient(90deg, #38a745 0%, #4cce5b 63%);
+           background-image:$gable-green-background;
+            backdrop-filter: blur(0.8);
+
             }
         &_form{
                 height:6vh;
@@ -299,7 +336,7 @@ body {
         &_searchbar{
             &_background{
                 height:30vh;
-                background-image:linear-gradient(90deg, #38a745 0%, #4cce5b 63%);
+                background-image:$gable-green-background;
                 }
             &_form{
                     height:4vh;
