--- a/templates/Accounts/registration.html
+++ b/templates/Accounts/registration.html
@@ -18,7 +18,7 @@
 {% endif %}
  {% if registered %}
       <div class="center-align">
-        <h3>Your account has been activated</h3>
+        <h3>Your account has been activated</h3><br>
         <p>
           <span>  <a  class="btn" href="{% url 'Accounts:user_login' %}">Click Here To Login</a>
           </span>
